# requirements

./: .gitignore  BUILD  CMakeLists.txt  INSTALL  README  test_coverage.sh
include/annotations/: common.hpp  error.hpp  errors.hpp  parser.hpp  requirements.hpp  sections.hpp  shortcut.hpp  shortcuts.hpp
include/commands/: batchresponse.hpp  batchthread.hpp  command.hpp  command_delete.hpp  command_down.hpp  command_firstof.hpp  command_folder.hpp  command_lastof.hpp  command_new.hpp  command_null.hpp  command_select.hpp  command_up.hpp  icommand.hpp  move.hpp  parser.hpp  selection.hpp  status.hpp
include/console/: console.hpp
include/generators/latex/: blob.hpp  requirements.hpp
include/greq/: blobselector.hpp  cellrendererreqtext.hpp  cellrendererreqtext2.hpp  editwindow.hpp  keycodewindow.hpp  mainwindow.hpp  reqtexteditable.hpp  settings.hpp
include/qreq/: actions.hpp  batchmessage.hpp  blobselector.hpp  commandline.hpp  f_code.hpp  keycodewindow.hpp  keypresseater.hpp  mainwindow.hpp  model.hpp  modelmanipulator.hpp  modelroles.hpp  reqtextdelegate.hpp  reqtextitem.hpp  reqtextitemdata.hpp  reqtextitemdelegate.hpp  reqtextitemmodel.hpp  reqtextitemwidget.hpp  reqtree.hpp  settings.hpp  texteditdelegate.hpp  threadconnector.hpp
include/req/: command.hpp  config.hpp  exception.hpp  select.hpp  status.hpp
include/req/command/: blobaliases.hpp  delete.hpp  edit.hpp  folder.hpp  listblobs.hpp  new.hpp  newblob.hpp  print.hpp  select.hpp  setparent.hpp  showfolder.hpp  touch.hpp  tree.hpp  up_down.hpp
include/req/console/: printtree.hpp
include/requirements/: blob.hpp  content_text.hpp  contentfactory.hpp  contentparser.hpp  exception.hpp  icommand.hpp  icontent.hpp  icontentvisitor.hpp  id.hpp  istorage.hpp  node.hpp  nodecollection.hpp  sectionparser.hpp  select.hpp  status.hpp  textstorage.hpp
include/requirements/annotations/: acceptances.hpp  errors.hpp  exception.hpp  majorprefix.hpp  parser.hpp  phases.hpp  requirements.hpp  scenes.hpp  sections.hpp  shortcuts.hpp
include/requirements/batch/: batchresponse.hpp  batchthread.hpp  queue.hpp  response.hpp  thread.hpp
include/requirements/commands/: batchresponse.hpp  blobaliases.hpp  command.hpp  command_delete.hpp  command_down.hpp  command_firstof.hpp  command_folder.hpp  command_lastof.hpp  command_new.hpp  command_null.hpp  command_select.hpp  command_up.hpp  delete.hpp  down.hpp  edit.hpp  firstof.hpp  folder.hpp  help.hpp  icommand.hpp  lastof.hpp  leveldown.hpp  levelup.hpp  listblobs.hpp  move.hpp  new.hpp  newblob.hpp  nextto.hpp  null.hpp  parser.hpp  previousto.hpp  print.hpp  select.hpp  selection.hpp  setcontent.hpp  showfolder.hpp  touch.hpp  trash.hpp  tree.hpp  up.hpp
include/requirements/console/: console.hpp  printtree.hpp
include/requirements/content/: text.hpp
include/requirements/generators/: iphasefiles.hpp
include/requirements/internal/: path.hpp
include/requirements/storage/: exception.hpp  text.hpp  text_common.hpp  text_load.hpp  text_save.hpp
include/util/: formatstring.hpp  lineparser.hpp  path.hpp  process.hpp  stringfile.hpp
programmers_documentation/: compile.sh  layer_architecture.uxf  requirements_core.tex
src/: main.cpp
src/annotations/: errors.cpp  parser.cpp  requirements.cpp  sections.cpp
src/commands/: batchthread.cpp  command.cpp  command_delete.cpp  command_new.cpp  command_select.cpp  parser.cpp  selection.cpp  status.cpp
src/console/: console.cpp
src/generators/latex/: blob.cpp  requirements.cpp
src/greq/: TODO  blobselector.cpp  cellrendererreqtext.cpp  cellrendererreqtext2.cpp  editwindow.cpp  keycodewindow.cpp  main.cpp  mainwindow.cpp  mainwindow_backend.cpp  mainwindow_signalhandler.cpp  reqtexteditable.cpp  settings.cpp
src/qreq/: TODO  blobselector.cpp  commandline.cpp  keycodewindow.cpp  keypresseater.cpp  main.cpp  mainwindow.cpp  mainwindow_backend.cpp  mainwindow_signalhandler.cpp  model.cpp  modelmanipulator.cpp  reqtextdelegate.cpp  reqtextitem.cpp  reqtextitemdelegate.cpp  reqtextitemmodel.cpp  reqtextitemwidget.cpp  reqtree.cpp  settings.cpp  texteditdelegate.cpp  threadconnector.cpp
src/req/: command.cpp  config.cpp  main.cpp  select.cpp  status.cpp
src/req/command/: blobaliases.cpp  delete.cpp  edit.cpp  folder.cpp  listblobs.cpp  new.cpp  newblob.cpp  print.cpp  select.cpp  setparent.cpp  showfolder.cpp  touch.cpp  tree.cpp  up_down.cpp
src/req/console/: printtree.cpp
src/requirements/: blob.cpp  content_text.cpp  contentfactory.cpp  contentparser.cpp  id.cpp  node.cpp  nodecollection.cpp  sectionparser.cpp  select.cpp  status.cpp  textstorage.cpp
src/requirements/annotations/: acceptances.cpp  majorprefix.cpp  parser.cpp  phases.cpp  requirements.cpp  scenes.cpp  sections.cpp
src/requirements/batch/: batchthread.cpp  queue.cpp  thread.cpp
src/requirements/commands/: blobaliases.cpp  command.cpp  command_delete.cpp  command_folder.cpp  command_new.cpp  command_select.cpp  delete.cpp  edit.cpp  folder.cpp  help.cpp  listblobs.cpp  new.cpp  newblob.cpp  parser.cpp  print.cpp  select.cpp  selection.cpp  setcontent.cpp  showfolder.cpp  status.cpp  touch.cpp  trash.cpp  tree.cpp
src/requirements/console/: console.cpp  printtree.cpp
src/requirements/content/: text.cpp
src/requirements/internal/: path.cpp
src/requirements/storage/: exception.cpp  text.cpp  text_common.cpp  text_load.cpp  text_save.cpp
src/util/: formatstring.cpp  lineparser.cpp  path.cpp  process.cpp  stringfile.cpp
test/annotations/: test_parser.cpp  test_requirements.cpp  test_sections.cpp
test/commands/: test_command_delete.cpp  test_command_folder.cpp  test_command_moves.cpp  test_command_new.cpp  test_command_select.cpp  test_parser.cpp  test_status.cpp
test/include/test/: batchthread.hpp  folder.hpp  nodeset.hpp
test/requirements/: test_node.cpp  test_status.cpp.cpp
test/requirements/annotations/: test_acceptances.cpp  test_parser.cpp  test_requirements.cpp  test_sections.cpp
test/requirements/commands/: test_command_blobs.cpp  test_command_edit.cpp  (+5 more)
test/test/: folder.cpp  nodeset.cpp
test/util/: test_lineparser.cpp
(+15 files in other folders)
